VCR: Add movie backup system

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -220,10 +220,15 @@ BEGIN
     CONTROL         "Use Default (/plugin)",IDC_DEFAULT_PLUGINS_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,102,204,10
     GROUPBOX        "",IDC_SAVES_GROUP,6,138,216,30
     EDITTEXT        IDC_SAVES_DIR,12,150,144,12,ES_AUTOHSCROLL
-    CONTROL         "Use default (/screenshot)",IDC_DEFAULT_SCREENSHOTS_CHECK,
+    CONTROL         "Use default (/screenshots)",IDC_DEFAULT_SCREENSHOTS_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,174,204,10
     PUSHBUTTON      "Browse...",IDC_CHOOSE_SAVES_DIR,162,150,54,12
     CONTROL         "Use default (/save)",IDC_DEFAULT_SAVES_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,138,204,8
+    GROUPBOX        "",IDC_BACKUPS_GROUP,6,209,216,30
+    EDITTEXT        IDC_BACKUPS_DIR,12,220,144,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "Browse...",IDC_CHOOSE_BACKUPS_DIR,162,220,54,12
+    CONTROL         "Use default (/backups)",IDC_DEFAULT_BACKUPS_CHECK,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,209,204,10
 END
 
 IDD_NEW_HOTKEY_DIALOG DIALOGEX 0, 0, 231, 262
@@ -284,6 +289,7 @@ BEGIN
     CONTROL         "Compiled Jump",IDC_ENABLE_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,216,96,8
     CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,216,96,8
     CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,228,96,10
+    CONTROL         "Movie Backups",IDC_MOVIE_BACKUPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,228,96,10
     CONTROL         "Pause when unfocused",IDC_PAUSENOTACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,96,8
     GROUPBOX        "Capture",IDC_FPSTITLE2,6,84,215,66
     CONTROL         "Record resets",IDC_RECORD_RESETS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,96,100,8
