View: Add remove cheat functionality to cheat dialog
Also shuffled the layout around a bit

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -662,17 +662,18 @@ BEGIN
     LTEXT           "Description",IDC_STATIC,7,61,100,14,SS_CENTERIMAGE
 END
 
-IDD_CHEATS DIALOGEX 0, 0, 271, 231
+IDD_CHEATS DIALOGEX 0, 0, 271, 214
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Cheats"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LISTBOX         IDC_LIST_CHEATS,7,7,257,119,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_EDIT_CHEAT,7,141,257,67,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
-    CONTROL         "Enabled",IDC_CHECK_CHEAT_ENABLED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,126,38,14
-    PUSHBUTTON      "+",IDC_NEW_CHEAT,7,126,19,14
-    PUSHBUTTON      "Apply",IDC_CHEAT_APPLY,214,126,50,14
-    EDITTEXT        IDC_EDIT_CHEAT_NAME,29,126,141,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_CHEAT,7,141,257,49,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+    CONTROL         "Enabled",IDC_CHECK_CHEAT_ENABLED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,192,38,14
+    PUSHBUTTON      "Add",IDC_NEW_CHEAT,7,126,59,14
+    PUSHBUTTON      "Apply",IDC_CHEAT_APPLY,214,192,50,14
+    EDITTEXT        IDC_EDIT_CHEAT_NAME,7,192,163,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Remove",IDC_REMOVE_CHEAT,67,126,45,14
 END
 
 
@@ -727,9 +728,9 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 264
         TOPMARGIN, 7
-        BOTTOMMARGIN, 224
+        BOTTOMMARGIN, 207
         HORZGUIDE, 126
-        HORZGUIDE, 140
+        HORZGUIDE, 199
     END
 END
 #endif    // APSTUDIO_INVOKED
