--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -218,6 +218,7 @@
             <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
             <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsCpp</CompileAs>
         </ClCompile>
+        <ClCompile Include="..\..\lua\LuaCallbacks.cpp"/>
         <ClCompile Include="..\..\main\capture\encoders\AVIEncoder.cpp" />
         <ClCompile Include="..\..\main\capture\encoders\FFmpegEncoder.cpp" />
         <ClCompile Include="..\..\main\capture\EncodingManager.cpp" />
@@ -392,7 +393,6 @@
         <ClCompile Include="..\..\main\win\wrapper\PersistentPathDialog.cpp" />
         <ClCompile Include="..\..\shared\Config.cpp" />
         <ClCompile Include="..\..\shared\helpers\io_helpers.cpp" />
-        <ClCompile Include="..\..\shared\LuaCallbacks.cpp" />
         <ClCompile Include="..\..\shared\messenger.cpp" />
     </ItemGroup>
     <ItemGroup>
