Lua: Implement abstract presenter system
The concept of a "Presenter" is introduced by this commit.

A presenter is responsible for holding the d2d1 rt of a lua instance, drawing the lua graphics to a control, and blitting its graphics to arbitrary DCs.

For now, the only presenter is the DComp-based one, which is performant and supports per-pixel transparency but only works on Windows 10+ and isn't currently supported by Wine.

An alternative future presenter, the GDIPresenter, will be introduced to handle the second case.

The user will be provided with a choice between the presenters in the config.

--- a/winproject/mupen64.vcxproj
+++ b/winproject/mupen64.vcxproj
@@ -210,113 +210,116 @@
         <ClInclude Include="..\view\lua\modules\movie.h"/>
         <ClInclude Include="..\view\lua\modules\savestate.h"/>
         <ClInclude Include="..\view\lua\modules\wgui.h"/>
-        <ClInclude Include="resource.h"/>
+        <ClInclude Include="..\view\lua\presenters\DCompPresenter.h" />
+        <ClInclude Include="..\view\lua\presenters\Presenter.h" />
+        <ClInclude Include="resource.h" />
     </ItemGroup>
     <ItemGroup>
-        <ClCompile Include="..\core\memory\dma.cpp"/>
-        <ClCompile Include="..\core\memory\flashram.cpp"/>
-        <ClCompile Include="..\core\memory\memory.cpp"/>
-        <ClCompile Include="..\core\memory\pif.cpp"/>
-        <ClCompile Include="..\core\memory\savestates.cpp"/>
-        <ClCompile Include="..\core\memory\summercart.cpp"/>
-        <ClCompile Include="..\core\memory\tlb.cpp"/>
+        <ClCompile Include="..\core\memory\dma.cpp" />
+        <ClCompile Include="..\core\memory\flashram.cpp" />
+        <ClCompile Include="..\core\memory\memory.cpp" />
+        <ClCompile Include="..\core\memory\pif.cpp" />
+        <ClCompile Include="..\core\memory\savestates.cpp" />
+        <ClCompile Include="..\core\memory\summercart.cpp" />
+        <ClCompile Include="..\core\memory\tlb.cpp" />
         <ClCompile Include="..\core\r4300\debugger.cpp" />
-        <ClCompile Include="..\core\r4300\pure_interp.cpp"/>
-        <ClCompile Include="..\core\r4300\compare_core.cpp"/>
-        <ClCompile Include="..\core\r4300\cop0.cpp"/>
-        <ClCompile Include="..\core\r4300\cop1.cpp"/>
-        <ClCompile Include="..\core\r4300\cop1_d.cpp"/>
-        <ClCompile Include="..\core\r4300\cop1_helpers.cpp"/>
-        <ClCompile Include="..\core\r4300\cop1_l.cpp"/>
-        <ClCompile Include="..\core\r4300\cop1_s.cpp"/>
-        <ClCompile Include="..\core\r4300\cop1_w.cpp"/>
-        <ClCompile Include="..\core\r4300\disasm.cpp"/>
-        <ClCompile Include="..\core\r4300\exception.cpp"/>
-        <ClCompile Include="..\core\r4300\gameshark.cpp"/>
-        <ClCompile Include="..\core\r4300\interrupt.cpp"/>
-        <ClCompile Include="..\core\r4300\Plugin.cpp"/>
-        <ClCompile Include="..\core\r4300\profile.cpp"/>
-        <ClCompile Include="..\core\r4300\r4300.cpp"/>
-        <ClCompile Include="..\core\r4300\recomp.cpp"/>
-        <ClCompile Include="..\core\r4300\regimm.cpp"/>
-        <ClCompile Include="..\core\r4300\rom.cpp"/>
-        <ClCompile Include="..\core\r4300\special.cpp"/>
-        <ClCompile Include="..\core\r4300\timers.cpp"/>
+        <ClCompile Include="..\core\r4300\pure_interp.cpp" />
+        <ClCompile Include="..\core\r4300\compare_core.cpp" />
+        <ClCompile Include="..\core\r4300\cop0.cpp" />
+        <ClCompile Include="..\core\r4300\cop1.cpp" />
+        <ClCompile Include="..\core\r4300\cop1_d.cpp" />
+        <ClCompile Include="..\core\r4300\cop1_helpers.cpp" />
+        <ClCompile Include="..\core\r4300\cop1_l.cpp" />
+        <ClCompile Include="..\core\r4300\cop1_s.cpp" />
+        <ClCompile Include="..\core\r4300\cop1_w.cpp" />
+        <ClCompile Include="..\core\r4300\disasm.cpp" />
+        <ClCompile Include="..\core\r4300\exception.cpp" />
+        <ClCompile Include="..\core\r4300\gameshark.cpp" />
+        <ClCompile Include="..\core\r4300\interrupt.cpp" />
+        <ClCompile Include="..\core\r4300\Plugin.cpp" />
+        <ClCompile Include="..\core\r4300\profile.cpp" />
+        <ClCompile Include="..\core\r4300\r4300.cpp" />
+        <ClCompile Include="..\core\r4300\recomp.cpp" />
+        <ClCompile Include="..\core\r4300\regimm.cpp" />
+        <ClCompile Include="..\core\r4300\rom.cpp" />
+        <ClCompile Include="..\core\r4300\special.cpp" />
+        <ClCompile Include="..\core\r4300\timers.cpp" />
         <ClCompile Include="..\core\r4300\tlb.cpp">
             <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)r4300_tlb</ObjectFileName>
             <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(IntDir)r4300_tlb</ObjectFileName>
         </ClCompile>
-        <ClCompile Include="..\core\r4300\tracelog.cpp"/>
-        <ClCompile Include="..\core\r4300\vcr.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\assemble.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\debug.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\gbc.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\gcop0.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\gcop1.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\gcop1_d.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\gcop1_helpers.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\gcop1_l.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\gcop1_s.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\gcop1_w.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\gr4300.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\gregimm.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\gspecial.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\gtlb.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\regcache.cpp"/>
-        <ClCompile Include="..\core\r4300\x86\rjump.cpp"/>
-        <ClCompile Include="..\core\r4300\bc.cpp"/>
-        <ClCompile Include="..\lib\speex\speex_resampler.c"/>
-        <ClCompile Include="..\lib\md5.c"/>
-        <ClCompile Include="..\shared\Config.cpp"/>
-        <ClCompile Include="..\shared\messenger.cpp"/>
-        <ClCompile Include="..\view\capture\encoders\AVIEncoder.cpp"/>
-        <ClCompile Include="..\view\capture\encoders\FFmpegEncoder.cpp"/>
-        <ClCompile Include="..\view\capture\EncodingManager.cpp"/>
-        <ClCompile Include="..\view\capture\Resampler.cpp"/>
-        <ClCompile Include="..\view\gui\Commandline.cpp"/>
-        <ClCompile Include="..\view\gui\features\Cheats.cpp"/>
-        <ClCompile Include="..\view\gui\features\ConfigDialog.cpp"/>
-        <ClCompile Include="..\view\gui\features\CoreDbg.cpp"/>
-        <ClCompile Include="..\view\gui\features\CrashHelper.cpp"/>
-        <ClCompile Include="..\view\gui\features\Dispatcher.cpp"/>
-        <ClCompile Include="..\view\gui\features\MGECompositor.cpp"/>
-        <ClCompile Include="..\view\gui\features\MovieDialog.cpp"/>
-        <ClCompile Include="..\view\gui\features\rombrowser.cpp"/>
-        <ClCompile Include="..\view\gui\features\Runner.cpp"/>
-        <ClCompile Include="..\view\gui\features\Seeker.cpp"/>
-        <ClCompile Include="..\view\gui\features\Statusbar.cpp"/>
-        <ClCompile Include="..\view\gui\FrontendService.cpp"/>
+        <ClCompile Include="..\core\r4300\tracelog.cpp" />
+        <ClCompile Include="..\core\r4300\vcr.cpp" />
+        <ClCompile Include="..\core\r4300\x86\assemble.cpp" />
+        <ClCompile Include="..\core\r4300\x86\debug.cpp" />
+        <ClCompile Include="..\core\r4300\x86\gbc.cpp" />
+        <ClCompile Include="..\core\r4300\x86\gcop0.cpp" />
+        <ClCompile Include="..\core\r4300\x86\gcop1.cpp" />
+        <ClCompile Include="..\core\r4300\x86\gcop1_d.cpp" />
+        <ClCompile Include="..\core\r4300\x86\gcop1_helpers.cpp" />
+        <ClCompile Include="..\core\r4300\x86\gcop1_l.cpp" />
+        <ClCompile Include="..\core\r4300\x86\gcop1_s.cpp" />
+        <ClCompile Include="..\core\r4300\x86\gcop1_w.cpp" />
+        <ClCompile Include="..\core\r4300\x86\gr4300.cpp" />
+        <ClCompile Include="..\core\r4300\x86\gregimm.cpp" />
+        <ClCompile Include="..\core\r4300\x86\gspecial.cpp" />
+        <ClCompile Include="..\core\r4300\x86\gtlb.cpp" />
+        <ClCompile Include="..\core\r4300\x86\regcache.cpp" />
+        <ClCompile Include="..\core\r4300\x86\rjump.cpp" />
+        <ClCompile Include="..\core\r4300\bc.cpp" />
+        <ClCompile Include="..\lib\speex\speex_resampler.c" />
+        <ClCompile Include="..\lib\md5.c" />
+        <ClCompile Include="..\shared\Config.cpp" />
+        <ClCompile Include="..\shared\messenger.cpp" />
+        <ClCompile Include="..\view\capture\encoders\AVIEncoder.cpp" />
+        <ClCompile Include="..\view\capture\encoders\FFmpegEncoder.cpp" />
+        <ClCompile Include="..\view\capture\EncodingManager.cpp" />
+        <ClCompile Include="..\view\capture\Resampler.cpp" />
+        <ClCompile Include="..\view\gui\Commandline.cpp" />
+        <ClCompile Include="..\view\gui\features\Cheats.cpp" />
+        <ClCompile Include="..\view\gui\features\ConfigDialog.cpp" />
+        <ClCompile Include="..\view\gui\features\CoreDbg.cpp" />
+        <ClCompile Include="..\view\gui\features\CrashHelper.cpp" />
+        <ClCompile Include="..\view\gui\features\Dispatcher.cpp" />
+        <ClCompile Include="..\view\gui\features\MGECompositor.cpp" />
+        <ClCompile Include="..\view\gui\features\MovieDialog.cpp" />
+        <ClCompile Include="..\view\gui\features\rombrowser.cpp" />
+        <ClCompile Include="..\view\gui\features\Runner.cpp" />
+        <ClCompile Include="..\view\gui\features\Seeker.cpp" />
+        <ClCompile Include="..\view\gui\features\Statusbar.cpp" />
+        <ClCompile Include="..\view\gui\FrontendService.cpp" />
         <ClCompile Include="..\view\gui\IOService.cpp" />
-        <ClCompile Include="..\view\gui\main_win.cpp"/>
-        <ClCompile Include="..\view\gui\wrapper\PersistentPathDialog.cpp"/>
-        <ClCompile Include="..\view\lua\LuaConsole.cpp"/>
-        <ClCompile Include="..\view\lua\LuaService.cpp"/>
+        <ClCompile Include="..\view\gui\main_win.cpp" />
+        <ClCompile Include="..\view\gui\wrapper\PersistentPathDialog.cpp" />
+        <ClCompile Include="..\view\lua\LuaConsole.cpp" />
+        <ClCompile Include="..\view\lua\LuaService.cpp" />
+        <ClCompile Include="..\view\lua\presenters\DCompPresenter.cpp" />
     </ItemGroup>
     <ItemGroup>
-        <Image Include="icons\austral.ico"/>
-        <Image Include="icons\beta.ico"/>
-        <Image Include="icons\Control.bmp"/>
-        <Image Include="icons\demo.ico"/>
-        <Image Include="icons\Display.bmp"/>
-        <Image Include="icons\europe.ico"/>
-        <Image Include="icons\france.ico"/>
-        <Image Include="icons\germany.ico"/>
-        <Image Include="icons\italy.ico"/>
-        <Image Include="icons\japan.ico"/>
-        <Image Include="icons\logo.bmp"/>
-        <Image Include="icons\m64big.ico"/>
-        <Image Include="icons\m64small.ico"/>
-        <Image Include="icons\RSP.bmp"/>
-        <Image Include="icons\Sound.bmp"/>
-        <Image Include="icons\spain.ico"/>
-        <Image Include="icons\unknown.ico"/>
-        <Image Include="icons\usa.ico"/>
+        <Image Include="icons\austral.ico" />
+        <Image Include="icons\beta.ico" />
+        <Image Include="icons\Control.bmp" />
+        <Image Include="icons\demo.ico" />
+        <Image Include="icons\Display.bmp" />
+        <Image Include="icons\europe.ico" />
+        <Image Include="icons\france.ico" />
+        <Image Include="icons\germany.ico" />
+        <Image Include="icons\italy.ico" />
+        <Image Include="icons\japan.ico" />
+        <Image Include="icons\logo.bmp" />
+        <Image Include="icons\m64big.ico" />
+        <Image Include="icons\m64small.ico" />
+        <Image Include="icons\RSP.bmp" />
+        <Image Include="icons\Sound.bmp" />
+        <Image Include="icons\spain.ico" />
+        <Image Include="icons\unknown.ico" />
+        <Image Include="icons\usa.ico" />
     </ItemGroup>
     <ItemGroup>
-        <ResourceCompile Include="rsrc.rc"/>
+        <ResourceCompile Include="rsrc.rc" />
     </ItemGroup>
     <ItemGroup>
-        <Manifest Include="app.manifest"/>
+        <Manifest Include="app.manifest" />
     </ItemGroup>
     <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets"/>
     <ImportGroup Label="ExtensionTargets">
