--- a/winproject/mupen64.vcxproj
+++ b/winproject/mupen64.vcxproj
@@ -168,8 +168,8 @@
         <ClInclude Include="..\core\r4300\x86\regcache.h"/>
         <ClInclude Include="..\lib\microlru.h"/>
         <ClInclude Include="..\shared\Config.hpp"/>
-        <ClInclude Include="..\shared\helpers\io_helpers.h"/>
-        <ClInclude Include="..\shared\helpers\string_helpers.h"/>
+        <ClInclude Include="..\shared\helpers\IOHelpers.h" />
+        <ClInclude Include="..\shared\helpers\StringHelpers.h" />
         <ClInclude Include="..\shared\messenger.h"/>
         <ClInclude Include="..\shared\services\FrontendService.h"/>
         <ClInclude Include="..\shared\services\IOService.h" />
